2006-04-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Enum.java: Documented.

2006-04-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/InstrumentationImpl.java:
	Moved from java.lang.
	* java/lang/InstrumentationImpl.java:
	Removed.
	* vm/reference/gnu/java/lang/VMInstrumentationImpl.java:
	Moved from java.lang.
	* vm/reference/java/lang/VMClassLoader.java:
	Corrected reference to InstrumentationImpl.
	* vm/reference/java/lang/VMInstrumentationImpl.java:
	Removed.
	
2006-04-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/annotation/Annotation.java:
	Documented.
	
2006-04-14  Tom Tromey  <tromey@redhat.com>

	* javax/swing/tree/DefaultTreeSelectionModel.java (getListeners):
	Genericized.
	* javax/swing/tree/AbstractLayoutCache.java (getVisiblePathsFrom):
	Genericized.

2006-04-10  Tom Tromey  <tromey@redhat.com>

	* javax/imageio/metadata/IIOMetadataFormatImpl.java (addObjectValue):
	Fixed parameter bounds.

2006-04-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
	
	* gnu/javax/crypto/assembly/Assembly.java,
	* gnu/javax/crypto/assembly/Cascade.java,
	* gnu/javax/crypto/assembly/CascadeStage.java,
	* gnu/javax/crypto/assembly/CascadeTransformer.java,
	* gnu/javax/crypto/assembly/Direction.java,
	* gnu/javax/crypto/assembly/LoopbackTransformer.java,
	* gnu/javax/crypto/assembly/ModeStage.java,
	* gnu/javax/crypto/assembly/Operation.java,
	* gnu/javax/crypto/assembly/PaddingTransformer.java,
	* gnu/javax/crypto/assembly/Stage.java,
	* gnu/javax/crypto/assembly/Transformer.java,
	* gnu/javax/crypto/cipher/Square.java,
	* gnu/javax/crypto/jce/cipher/AESSpi.java,
	* gnu/javax/crypto/jce/cipher/ARCFourSpi.java,
	* gnu/javax/crypto/jce/cipher/AnubisSpi.java,
	* gnu/javax/crypto/jce/cipher/BlowfishSpi.java,
	* gnu/javax/crypto/jce/cipher/CipherAdapter.java,
	* gnu/javax/crypto/jce/cipher/DESSpi.java,
	* gnu/javax/crypto/jce/cipher/KhazadSpi.java,
	* gnu/javax/crypto/jce/cipher/NullCipherSpi.java,