@@ -1,3 +1,10 @@
+2006-04-21  Jeroen Frijters  <jeroen@frijters.net>
+
+	* java/lang/reflect/AccessibleObject.java:
+	Implemented AnnotatedElement.
+	(getAnnotation, getAnnotations, getDeclaredAnnotations,
+	isAnnotationPresent): New methods.
+
 2006-04-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/lang/Enum.java: Documented.
